Switch to Java 17 and repair flyway migration problem